--- a/src/observation/dashboard.html
+++ b/src/observation/dashboard.html
@@ -28,6 +28,7 @@
     import { theme } from '@/theme'
     import * as components from 'vuetify/components';
     import * as directives from 'vuetify/directives';
+    import { createPinia } from 'pinia'
 
     import DashboardApp from './DashboardApp.vue';
     import '@/style/main.scss';
@@ -41,7 +42,9 @@
       theme,
     });
     const app = createApp(DashboardApp);
+    const pinia = createPinia();
     app.use(vuetify);
+    app.use(pinia);
     app.mount('#app');
   </script>
 </body>
